--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/DrewIndeed/learn-webpack-p1#readme",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
