--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   }
 }
